--- a/Docs/assets/highlight.css
+++ b/Docs/assets/highlight.css
@@ -11,10 +11,10 @@
     --dark-hl-4: #569CD6;
     --light-hl-5: #795E26;
     --dark-hl-5: #DCDCAA;
-    --light-hl-6: #267F99;
-    --dark-hl-6: #4EC9B0;
-    --light-hl-7: #008000;
-    --dark-hl-7: #6A9955;
+    --light-hl-6: #008000;
+    --dark-hl-6: #6A9955;
+    --light-hl-7: #267F99;
+    --dark-hl-7: #4EC9B0;
     --light-code-background: #FFFFFF;
     --dark-code-background: #1E1E1E;
 }
@@ -43,7 +43,7 @@
     --code-background: var(--dark-code-background);
 } }
 
-body.light {
+:root[data-theme='light'] {
     --hl-0: var(--light-hl-0);
     --hl-1: var(--light-hl-1);
     --hl-2: var(--light-hl-2);
@@ -55,7 +55,7 @@ body.light {
     --code-background: var(--light-code-background);
 }
 
-body.dark {
+:root[data-theme='dark'] {
     --hl-0: var(--dark-hl-0);
     --hl-1: var(--dark-hl-1);
     --hl-2: var(--dark-hl-2);
